<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context=".ui.neighbour_detail.DetailNeighbourActivity">

    <ImageView
        android:id="@+id/item_detail_avatar"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/item_detail_back_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:src="@drawable/ic_baseline_arrow_back"
        app:layout_constraintStart_toStartOf="@id/item_detail_avatar"
        app:layout_constraintTop_toTopOf="@id/item_detail_avatar" />

    <TextView
        android:id="@+id/item_avatar_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/item_detail_avatar"
        app:layout_constraintStart_toStartOf="@id/item_detail_avatar" />

    <android.support.v7.widget.CardView
        android:id="@+id/profile_cardview"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorWhite"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_detail_avatar">

        <TextView
            android:id="@+id/item_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_profile_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:drawableStart="@drawable/ic_pin"
            android:drawablePadding="25dp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/item_profile_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="110dp"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="25dp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/item_profile_internet_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="160dp"
            android:drawableStart="@drawable/ic_world"
            android:drawablePadding="25dp"
            android:textColor="@color/colorBlack" />

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/about_me_cardview"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorWhite"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_cardview">

        <TextView
            android:id="@+id/item_aboutme_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/about_me"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_aboutme_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:textColor="@color/colorBlack" />
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/item_detail_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_detail_avatar"
        app:srcCompat="@drawable/ic_star_white_24dp" />


</android.support.constraint.ConstraintLayout>